Aula 02 de HTML

--- a/Aula01/primeiraPage.html
+++ b/Aula01/primeiraPage.html
@@ -2,8 +2,14 @@
     <head>
         <meta charset="UTF-8">
         <title>Primeira Page SENAC</title>
+        <!-- <link rel="icon" type="image/x-icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSV4_Kp2ZFxtWaNSU2GoFtUqqWpyed8G8Ki-w&usqp=CAU"> -->
+        <link rel="icon" type="image/x-icon" href="img/icons8-free-bsd-48.png">
     </head>
     <body>
         <H1>Olá Mundo!!!</H1>
+        <H2>Olá Mundo!!!</H2>
+        <H3>Olá Mundo!!!</H3>
+        <H4>Olá Mundo!!!</H4>
+        <H5>Olá Mundo!!!</H5>
     </body>
 </html>
