--- a/Aula02/curriculoDanilo.html
+++ b/Aula02/curriculoDanilo.html
@@ -28,20 +28,38 @@
     </div>
     <div id="formacao">
         <h2>Formação</h2>
-        <ul>
+        <ol>
             <li>Tecnólogo em Análise e Desenvolvimento de Sistemas - IFPE - 2008</li>
             <li>Mestrado em Ciência da Computação - UFPE - 2015</li>
             <li>Especialização em Informática em Saúde - UNIFESP - 2018</li>
-        </ul>
+        </ol>
     </div>
     <div id="experiencia">
         <h2>Experiência Profissional:</h2>
-        <ul>
-            <li>Desenvolvedor Jr JAVA - 5IT (2008 - 2010)</li>
-            <li>Desenvolvedor Pleno JAVA - UFPE (2010 - 2012)</li>
-            <li>Analista de Sistemas - UFPE (2012 - Hoje)</li>
-        </ul>
+        <center>
+            <table>
+                <tr>
+                    <th>Função</th>
+                    <th>Instituição</th>
+                    <th>Período</th>
+                </tr>
+                <tr>
+                    <td>Desenvolvedor Jr JAVA</td>
+                    <td>5IT</td>
+                    <td>out/2008 a fev/2010</td>
+                </tr>
+                <tr>
+                    <td>Desenvolvedor Pleno JAVA</td>
+                    <td>UFPE</td>
+                    <td>maio/2010 a ago/2012</td>
+                </tr>
+                <tr>
+                    <td>Analista de Sistemas</td>
+                    <td>UFPE</td>
+                    <td>set/2012 a --</td>
+                </tr>
+            </table>
+        </center>
     </div>
-    
 </body>
 </html>
