--- a/Aula02/curriculoDanilo.html
+++ b/Aula02/curriculoDanilo.html
@@ -33,6 +33,7 @@
             <li>Mestrado em Ciência da Computação - UFPE - 2015</li>
             <li>Especialização em Informática em Saúde - UNIFESP - 2018</li>
         </ol>
+        <hr>
     </div>
     <div id="experiencia">
         <h2>Experiência Profissional:</h2>
@@ -60,6 +61,19 @@
                 </tr>
             </table>
         </center>
+        <hr>
+    </div>
+    <div id="mapaEnd">
+        <center>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3950.4793320284557!2d-34.88741928571189!3d-8.05248918266852!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab1997eb26b1bb%3A0x38559aaa17ddef7c!2sFaculdade%20Senac%20Pernambuco!5e0!3m2!1spt-BR!2sbr!4v1662042851084!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </center>
+        <hr>
+    </div>
+    <div id="mapaEnd">
+        <address>
+            Desenvolvido:<a href="danilofsilva@fac.pe.senac.br">Prof. Danilo Farias SENAC</a>.<br>
+            Rua Dom Bosco, 1000<br> Recife, PE – Brasil
+        </address>
     </div>
 </body>
 </html>
