--- a/Aula02/curriculoDanilo.html
+++ b/Aula02/curriculoDanilo.html
@@ -5,12 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="img/icons8-menu-2-64.png">
+    <style>
+        h2 {
+            font-size: 25px; 
+            font-family: 'Cambria';
+            color: #1C3879;
+        }
+
+        body {
+            background-color: #F9F5EB;
+        }
+
+        .apresentacao {
+            background-color: #EAE3D2;
+        }
+    </style>
     <title>Currículo Danilo Farias</title>
 </head>
 <body>
-    <div id="apresentacao">
+    <div class="apresentacao">
         <center>
-            <h1>Danilo Farias Soares da Silva</h1>
+            <h1 style="font-size: 50px; color: #1C3879; font-family: 'Verdana'">Danilo Farias Soares da Silva</h1>
             <img src="img/Danilo.png" alt="Danilo Farias" width="150" height="150">
             <hr>
         </center>        
