--- a/Aula03/curriculoDanilo.html
+++ b/Aula03/curriculoDanilo.html
@@ -4,19 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="img/icons8-menu-2-64.png">
+    <link rel="icon" type="image/x-icon" href="../Aula02/img/icons8-menu-2-64.png">
+    <link rel="stylesheet" type="text/css" href="curriculo.css">
+    <style>
+        h2.azulEscuro {
+            font-size: 25px; 
+            font-family: 'Verdana';
+            color: #1C3879;
+        }
+    </style>
     <title>Currículo Danilo Farias</title>
 </head>
 <body>
-    <div class="apresentacao">
+    <div id="apresentacao">
         <center>
-            <h1>Danilo Farias Soares da Silva</h1>
+            <h1 style="font-size: 50px; color: #1C3879; font-family: 'Verdana'">Danilo Farias Soares da Silva</h1>
             <img src="img/Danilo.png" alt="Danilo Farias" width="150" height="150">
             <hr>
         </center>        
     </div>
     <div id="identificacao">
-        <h2>Identicação</h2>
+        <h2 class="azulEscuro">Identicação</h2>
         <ul>
             <li><b>Email: </b>dansoaresfarias@gmail.com</li>
             <li><b>Telefone: </b>(81)981905671</li>
@@ -27,7 +35,7 @@
         <hr>
     </div>
     <div id="formacao">
-        <h2>Formação</h2>
+        <h2 class="azulClaro">Formação</h2>
         <ol>
             <li>Tecnólogo em Análise e Desenvolvimento de Sistemas - IFPE - 2008</li>
             <li>Mestrado em Ciência da Computação - UFPE - 2015</li>
@@ -40,9 +48,9 @@
         <center>
             <table>
                 <tr>
-                    <th>Função</th>
-                    <th>Instituição</th>
-                    <th>Período</th>
+                    <th class="azulClaro">Função</th>
+                    <th class="azulClaro">Instituição</th>
+                    <th class="azulClaro">Período</th>
                 </tr>
                 <tr>
                     <td>Desenvolvedor Jr JAVA</td>
@@ -69,7 +77,7 @@
         </center>
         <hr>
     </div>
-    <div id="mapaEnd">
+    <div id="footer">
         <address>
             Desenvolvido:<a href="danilofsilva@fac.pe.senac.br">Prof. Danilo Farias SENAC</a>.<br>
             Rua Dom Bosco, 1000<br> Recife, PE – Brasil
