--- a/Aula03/curriculoDanilo.html
+++ b/Aula03/curriculoDanilo.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,20 +9,19 @@
     <link rel="stylesheet" type="text/css" href="curriculo.css">
     <style>
         h2.azulEscuro {
-            font-size: 25px; 
+            font-size: 25px;
             font-family: 'Verdana';
             color: #1C3879;
         }
     </style>
     <title>Currículo Danilo Farias</title>
 </head>
+
 <body>
-    <div id="apresentacao">
-        <center>
-            <h1 style="font-size: 50px; color: #1C3879; font-family: 'Verdana'">Danilo Farias Soares da Silva</h1>
-            <img src="img/Danilo.png" alt="Danilo Farias" width="150" height="150">
-            <hr>
-        </center>        
+    <div id="apresentacao" class="centro">
+        <h1 style="font-size: 50px; color: #1C3879; font-family: 'Verdana'">Danilo Farias Soares da Silva</h1>
+        <img src="img/Danilo.png" alt="Danilo Farias" width="150" height="150">
+        <hr>
     </div>
     <div id="identificacao">
         <h2 class="azulEscuro">Identicação</h2>
@@ -44,37 +44,36 @@
         <hr>
     </div>
     <div id="experiencia">
-        <h2>Experiência Profissional:</h2>
-        <center>
-            <table>
-                <tr>
-                    <th class="azulClaro">Função</th>
-                    <th class="azulClaro">Instituição</th>
-                    <th class="azulClaro">Período</th>
-                </tr>
-                <tr>
-                    <td>Desenvolvedor Jr JAVA</td>
-                    <td>5IT</td>
-                    <td>out/2008 a fev/2010</td>
-                </tr>
-                <tr>
-                    <td>Desenvolvedor Pleno JAVA</td>
-                    <td>UFPE</td>
-                    <td>maio/2010 a ago/2012</td>
-                </tr>
-                <tr>
-                    <td>Analista de Sistemas</td>
-                    <td>UFPE</td>
-                    <td>set/2012 a --</td>
-                </tr>
-            </table>
-        </center>
+        <h2 class="centro">Experiência Profissional</h2>
+        <table class="centro" id="customers">
+            <tr>
+                <th class="azulClaro">Função</th>
+                <th class="azulClaro">Instituição</th>
+                <th class="azulClaro">Período</th>
+            </tr>
+            <tr>
+                <td>Desenvolvedor Jr JAVA</td>
+                <td>5IT</td>
+                <td>out/2008 a fev/2010</td>
+            </tr>
+            <tr>
+                <td>Desenvolvedor Pleno JAVA</td>
+                <td>UFPE</td>
+                <td>maio/2010 a ago/2012</td>
+            </tr>
+            <tr>
+                <td>Analista de Sistemas</td>
+                <td>UFPE</td>
+                <td>set/2012 a --</td>
+            </tr>
+        </table>
         <hr>
     </div>
-    <div id="mapaEnd">
-        <center>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3950.4793320284557!2d-34.88741928571189!3d-8.05248918266852!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab1997eb26b1bb%3A0x38559aaa17ddef7c!2sFaculdade%20Senac%20Pernambuco!5e0!3m2!1spt-BR!2sbr!4v1662042851084!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </center>
+    <div id="mapaEnd" class="centro">
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3950.4793320284557!2d-34.88741928571189!3d-8.05248918266852!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab1997eb26b1bb%3A0x38559aaa17ddef7c!2sFaculdade%20Senac%20Pernambuco!5e0!3m2!1spt-BR!2sbr!4v1662042851084!5m2!1spt-BR!2sbr"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
         <hr>
     </div>
     <div id="footer">
@@ -84,4 +83,5 @@
         </address>
     </div>
 </body>
+
 </html>
