Aula 03 CSS CLT

--- a/Aula03/curriculoDanilo.html
+++ b/Aula03/curriculoDanilo.html
@@ -44,7 +44,7 @@
         <hr>
     </div>
     <div id="experiencia">
-        <h2 class="centro">Experiência Profissional</h2>
+        <h2 class="azulEscuro">Experiência Profissional</h2>
         <table class="centro" id="customers">
             <tr>
                 <th class="azulClaro">Função</th>
