--- a/AulaJS/curriculoDaniloMatz.html
+++ b/AulaJS/curriculoDaniloMatz.html
@@ -8,16 +8,28 @@
     <link rel="icon" type="image/x-icon" href="img/icons8-menu-2-64.png">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="/materialize/css/materialize.min.css">
-    <!-- Compiled and minified JavaScript -->
-    <script src="/materialize/js/materialize.min.js"></script>
     <title>Currículo Danilo Farias</title>
 </head>
 
 <body class="container">
+    <div class="row">
+        <div class="col s3 center">
+            <button onclick="menu('identificacao')">Identicação</button>
+        </div>
+        <div class="col s3 center">
+            <button onclick="menu('formacao')">Formação</button>
+        </div>
+        <div class="col s3 center">
+            <button onclick="menu('experiencia')">Experiência Profissional</button>
+        </div>
+        <div class="col s3 center">
+            <button onclick="menu('mapaEnd')">Endereco</button>
+        </div>
+    </div>
     <div class="apresentacao">
         <center>
-            <h1>Danilo Farias Soares da Silva</h1>
-            <img src="img/Danilo.png" alt="Danilo Farias" width="150" height="150">
+            <h1 id="nome">Danilo Farias Soares da Silva</h1>
+            <img id="imagem" src="img/Danilo.png" alt="Danilo Farias" width="150" height="150">
             <hr>
         </center>
     </div>
@@ -28,19 +40,22 @@
             <li><b>Telefone: </b>(81)981905671</li>
             <br>
             <div class="row center">
-                <div class="col s4"><a class="waves-effect waves-light btn-small" href="http://lattes.cnpq.br/5345085293597975" target="_blank">Lattes</a></div>
-                <div class="col s4"><a class="waves-effect waves-light btn-small" href="https://github.com/dansoaresfarias/senacclt2022-2" target="_blank">GitHub</a></div>
-                <div class="col s4"><a class="waves-effect waves-light btn-small" href="https://www.linkedin.com/in/danilo-soares-2479271a/" target="_blank">Linkedin</a></div>  
+                <div class="col s4"><a class="waves-effect waves-light btn-small"
+                        href="http://lattes.cnpq.br/5345085293597975" target="_blank">Lattes</a></div>
+                <div class="col s4"><a class="waves-effect waves-light btn-small"
+                        href="https://github.com/dansoaresfarias/senacclt2022-2" target="_blank">GitHub</a></div>
+                <div class="col s4"><a class="waves-effect waves-light btn-small"
+                        href="https://www.linkedin.com/in/danilo-soares-2479271a/" target="_blank">Linkedin</a></div>
             </div>
         </ul>
         <hr>
     </div>
     <div id="formacao">
         <h5>Formação</h5>
-        <ol>
-            <li>Tecnólogo em Análise e Desenvolvimento de Sistemas - IFPE - 2008</li>
-            <li>Mestrado em Ciência da Computação - UFPE - 2015</li>
-            <li>Especialização em Informática em Saúde - UNIFESP - 2018</li>
+        <ol id="listaFormacao">
+            <li id="graduacao">Tecnólogo em Análise e Desenvolvimento de Sistemas - IFPE - 2008</li>
+            <li id="mestrado">Mestrado em Ciência da Computação - UFPE - 2015</li>
+            <li id="especializacao">Especialização em Informática em Saúde - UNIFESP - 2018</li>
         </ol>
         <hr>
     </div>
@@ -81,12 +96,23 @@
         </center>
         <hr>
     </div>
-    <div id="mapaEnd">
-        <address>
-            Desenvolvido:<a href="danilofsilva@fac.pe.senac.br">Prof. Danilo Farias SENAC</a>.<br>
-            Rua Dom Bosco, 1000<br> Recife, PE – Brasil
-        </address>
+    <div id="End">
+        <div class="row">
+            <div class="col s6">
+                <address>
+                    Desenvolvido:<a href="danilofsilva@fac.pe.senac.br">Prof. Danilo Farias SENAC</a>.<br>
+                    Rua Dom Bosco, 1000<br> Recife, PE – Brasil
+                </address>
+            </div>
+            <div class="col s6">
+                <button class="btn-floating btn-large waves-effect waves-light right"
+                    onclick="viniciusDornellas('Dornellas')">VD</button>
+            </div>
+        </div>
     </div>
 </body>
+<!-- Compiled and minified JavaScript -->
+<script src="/materialize/js/materialize.min.js"></script>
+<script src="/AulaJS/js/mudarCurriculo.js"></script>
 
 </html>
